# virtual_cam

./: .travis.yml  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
include/virtual_cam/: Image.h  Loader.h
src/: Image.cpp  Loader.cpp  crop.cpp  load.cpp  save.cpp  view.cpp
srv/: cheese.srv
