<?xml version="1.0"?>
<package>
  <name>virtual_cam</name>
  <version>0.0.0</version>
  <description>The virtual_cam package</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>rgbd</build_depend>

  <run_depend>yaml-cpp</run_depend>
  <run_depend>rgbd</run_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>

</package>
